--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Secretaries -- Fiction'
 - !lcsh 'World War, 1914-1918 -- England -- Fiction'
 - !lcsh 'Man-woman relationships -- Fiction'
+- GITenberg
 title: The Second Fiddle
 url: http://www.gutenberg.org/ebooks/41107
